[package]
name = "hollow_rando_im_stuck"
version = "0.3.0"
authors = ["Sage Griffin <sage@sagetheprogrammer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"], optional = true }
itertools = "0.10.0"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.2.1"

[features]
default = ["binary"]
binary = ["clap"]
