[package]
name = "hollow_rando_im_stuck_wasm"
version = "0.1.0"
authors = ["Sage Griffin <sage@sagetheprogrammer.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hollow_rando_im_stuck = { path = "../" }
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
